@@ -1,3 +1,4 @@
 DIST paper_trail-2.6.3.gem 99328 SHA256 078425d675817b10313fa738d04792eda1560945184b251f3230adc287ff754d SHA512 2f5a552d83b37b128b2faf4146d2a97cbd1f9d1a3b419aa60e517cc3caa4c5af182ea6dbfae93b6fd9536a2222c78fc53923d9171e340796d05b22254d3c90d0 WHIRLPOOL 8944eae9b7f238cbe41dc82b96cc70d2b34c8261bd464afb1e8944c27089bdd34dd7e8d35f66e598cb0d3e0aba38fb8b005e2205a66b7d96d99c950afc9d12d7
 DIST paper_trail-3.0.2.gem 125440 SHA256 c349ed6cc813097b8fc7c08bd19efa8325f31203f911184040e309aa42b35ecd SHA512 578c34f66c0448e0f7f8f3d32f804dfad4fe338f673de315931bde27af07dbf4ee031821dc5b576fc96c2a06d9211412f406f36663c730fba31236a1e36f807e WHIRLPOOL d9325c8477c451ed2a01ec5847a4afdfe5925e31d08498f7c15e1ad1cf91364e0dffba473a38d7c754461d938c83a28f19fa1611fe601e6af49d71d9aa71f24d
 DIST paper_trail-3.0.3.gem 128000 SHA256 c01910aa418cd62e5f6d498861d7ee18a07eb37f1e6dd5b342ae0c21759a0d02 SHA512 824ec30e186929ceac7ebbee4b328d2d550ea806171b197c617c7e11a9aa7bfdcb81df81b026fcf4defc9accabf8b107f6da025ca3f10b5b8c032255c484be60 WHIRLPOOL 24036feae6b4afc1d8c080f647f00911e9c79f96308a1322438f766eda623a8ebe94eccb8b59c965b951da92522a064ee7248404cbf6cd755d44aef5089a2f1b
+DIST paper_trail-3.0.6.gem 129024 SHA256 a775b82511e747471cf877c3379a6fe5dcb156bbb92eab3e6a77f98ca4357033 SHA512 c16156850651539e1c06d4c524913260feb90359ed3344c1d571a5bbae992d95208e8caffa52509ab4733d8d6059fed83af8f969ff4b21475a3d23b02c8c0fef WHIRLPOOL 224dc7d3d556048f36138bb86580cb70ebb4a2756ddc6eb1527162b298ca655f98835e8bae6f9cf2e0b44d075198a2f487517dc1a83d57046b852167856cae1c
