@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*paper_trail-3.0.6 (20 Oct 2014)
+
+  20 Oct 2014; Hans de Graaff <graaff@gentoo.org> +paper_trail-3.0.6.ebuild:
+  Version bump.
+
   20 Oct 2014; Hans de Graaff <graaff@gentoo.org> -paper_trail-3.0.0.ebuild,
   -paper_trail-3.0.1.ebuild:
   Cleanup.
